force-app/main/default/objects/Related_Product__c/Related_Product__c.object-meta.xml
<CustomObject>
    <label>Related Product</label>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>