force-app/main/default/objects/Related_Product__c/fields/Customer_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Number__c</fullName>
    <formula>Order__r.Order_SAP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Order Number</label>
    <type>Text</type>
</CustomField>