force-app/main/default/objects/Related_Product__c/fields/Issue_Comments__c.field-meta.xml
<CustomField>
    <fullName>Issue_Comments__c</fullName>
    <label>Issue Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>