force-app/main/default/objects/Related_Product__c/fields/Related_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Name__c</fullName>
    <formula>Order_Product__r.xINT_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Product Name</label>
    <type>Text</type>
</CustomField>